Changed the List to array, and implemented bubble sort.